# assignment_computed-torque-simulink

./: CMakeLists.txt  README.md  computed_torque.mdl  test.m
smoke-test/: CMakeLists.txt  post-test.sh  pre-test.sh  test.cpp  test.m  test.sh  test.xml
smoke-test/fixtures/: fixture.xml  fixture.xml.in
